Fixing column meta on mobile

--- a/modules/_columns/columns.scss
+++ b/modules/_columns/columns.scss
@@ -11,11 +11,6 @@ $module: '.wrap-columns-';
 #{$module}outer {
   margin: 0 -15px;
 
-
-  @media all and (max-width: $screenSmallMax) {
-    margin: 0;
-  }
-
   .wrap-meta {
     table-layout: fixed;
     display: table;
@@ -24,6 +19,11 @@ $module: '.wrap-columns-';
 
     .wrap-meta-item {
       display: table-cell;
+      text-align: center;
+
+      &:first-child {
+        text-align: left;
+      }
 
       &.large-center {
         width: 50%;
@@ -40,6 +40,43 @@ $module: '.wrap-columns-';
       &.spaced-item {
         .item {
           margin: 0 0 0 50px;
+        }
+      }
+    }
+  }
+
+  @media all and (max-width: $screenSmallMax) {
+    margin: 0;
+
+    .wrap-meta {
+      margin: 0;
+
+      .wrap-meta-item {
+        display: block;
+        width: 100%;
+        text-align: center;
+        margin: 5px 0;
+
+        &:first-child {
+          text-align: center;
+        }
+
+        &.large-center { width: 100%; }
+
+        .item {
+          margin: 0 5px;
+          display: inline-block;
+
+          &:first-child {
+            margin-left: 0;
+          }
+          &:last-child {
+            margin-right: 0;
+          }
+
+          .key, .value {
+            display: block;
+          }
         }
       }
     }
